--- a/templates/index.html.tmpl
+++ b/templates/index.html.tmpl
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title><TMPL_VAR name></title>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <link type="image/x-icon" href="favicon.ico" rel="shortcut icon">
 <link rel="stylesheet" href="planet.css" type="text/css">
 <link rel="alternate" type="application/rss+xml" title="<TMPL_VAR name ESCAPE="HTML">" href="rss20.xml">
