gid fanden havde utf8

--- a/templates/index.html.tmpl
+++ b/templates/index.html.tmpl
@@ -41,7 +41,7 @@
 					<TMPL_VAR date>
 
 					<br><br><b>Disclaimer:</b><br>
-					Dette er folks egne meninger og har ikke nødvendigvis nogen forbindelse til hvad SSLUG mener.
+					Dette er folks egne meninger og har ikke nÃ¸dvendigvis nogen forbindelse til hvad SSLUG mener.
 
 					<br><br>
 					<div align="center">
