Fixed index.html.tmpl så den bruger faces/ i stedet for images/

--- a/templates/index.html.tmpl
+++ b/templates/index.html.tmpl
@@ -91,7 +91,7 @@
 
 				<div class="entrycontent"><p>
 					<TMPL_IF channel_face>
-					<img class="face" src="images/<TMPL_VAR channel_face ESCAPE="HTML">" width="<TMPL_VAR channel_facewidth ESCAPE="HTML">" height="<TMPL_VAR channel_faceheight ESCAPE="HTML">" alt="<TMPL_VAR channel_name>" align="right">
+					<img class="face" src="faces/<TMPL_VAR channel_face ESCAPE="HTML">" width="<TMPL_VAR channel_facewidth ESCAPE="HTML">" height="<TMPL_VAR channel_faceheight ESCAPE="HTML">" alt="<TMPL_VAR channel_name>" align="right">
 					</TMPL_IF>
 				<TMPL_VAR content>
 				</p>
