gid fanden havde utf8 :e ++enc=utf-8

--- a/templates/index.html.tmpl
+++ b/templates/index.html.tmpl
@@ -43,8 +43,8 @@
 					<br><br><b>Disclaimer:</b><br>
 					Dette er folks egne meninger og har ikke nÃ¸dvendigvis nogen forbindelse til hvad SSLUG mener.
 
-					<br><br><b>Kom på:</b><br>
-					Kontakt <a href="mailto:planet@sslug.dk">planet@sslug.dk</a> hvis du føler du vil være her.
+					<br><br><b>Kom pÃ¥:</b><br>
+					Kontakt <a href="mailto:planet@sslug.dk">planet@sslug.dk</a> hvis du fÃ¸ler du vil vÃ¦re her.
 					<br><br>
 					<div align="center">
 						<a href="rss20.xml">
