--- a/templates/index.html.tmpl
+++ b/templates/index.html.tmpl
@@ -91,12 +91,12 @@
 				</div>
 				</TMPL_IF>
 
-				<div class="entrycontent"><p>
+				<div class="entrycontent"><div>
 					<TMPL_IF channel_face>
 					<img class="face" src="faces/<TMPL_VAR channel_face ESCAPE="HTML">" alt="<TMPL_VAR channel_name>" align="right">
 					</TMPL_IF>
 				<TMPL_VAR content>
-				</p>
+				</div>
 				<TMPL_IF comments>
 				<p>
 					<span class="commentlink">
