velkommen til planet opensource

--- a/templates/rss20.xml.tmpl
+++ b/templates/rss20.xml.tmpl
@@ -13,7 +13,7 @@
 	<guid isPermaLink="false"><TMPL_VAR id ESCAPE="HTML"></guid>
 	<link><TMPL_VAR link ESCAPE="HTML"></link>
 	<TMPL_IF content>
-	<description><TMPL_IF channel_face>&lt;img src=&quot;http://planet.sslug.dk/images/<TMPL_VAR channel_face ESCAPE="HTML">&quot; width=&quot;<TMPL_VAR channel_facewidth>&quot; height=&quot;<TMPL_VAR channel_faceheight>&quot; alt=&quot;&quot; align=&quot;right&quot; style=&quot;float: right;&quot;&gt;</TMPL_IF><TMPL_VAR content ESCAPE="HTML"></description>
+	<description><TMPL_IF channel_face>&lt;img src=&quot;http://planet.opensource.dk/images/<TMPL_VAR channel_face ESCAPE="HTML">&quot; width=&quot;<TMPL_VAR channel_facewidth>&quot; height=&quot;<TMPL_VAR channel_faceheight>&quot; alt=&quot;&quot; align=&quot;right&quot; style=&quot;float: right;&quot;&gt;</TMPL_IF><TMPL_VAR content ESCAPE="HTML"></description>
 	</TMPL_IF>
 	<pubDate><TMPL_VAR date_822></pubDate>
 	<dc:creator><TMPL_VAR channel_name> (<TMPL_VAR channel_username>)</dc:creator>
