--- a/templates/sslug.frontpage.tmpl
+++ b/templates/sslug.frontpage.tmpl
@@ -1,5 +1,5 @@
 <ul>
 <TMPL_LOOP Items>
-	<li><TMPL_VAR channel_name>: <TMPL_IF title><a href="http://planet.sslug.dk/"><TMPL_VAR title></a>.</TMPL_IF></li>
+	<li><TMPL_VAR channel_name>: <TMPL_IF title><a href="http://planet.opensource.dk/"><TMPL_VAR title></a>.</TMPL_IF></li>
 </TMPL_LOOP>
 </ul>
