--- a/templates/atom.xml.tmpl
+++ b/templates/atom.xml.tmpl
@@ -14,7 +14,7 @@
 		<link href="<TMPL_VAR link ESCAPE="HTML">"/>
 		<id><TMPL_VAR id ESCAPE="HTML"></id>
 		<updated><TMPL_VAR date_iso></updated>
-		<content type="html"<TMPL_IF content_language> xml:lang="<TMPL_VAR content_language>"</TMPL_IF>><TMPL_IF channel_face>&lt;img src=&quot;http://planet.sslug.dk/images/<TMPL_VAR channel_face ESCAPE="HTML">&quot; width=&quot;<TMPL_VAR channel_facewidth>&quot; height=&quot;<TMPL_VAR channel_faceheight>&quot; alt=&quot;&quot; align=&quot;right&quot; style=&quot;float: right;&quot;&gt;</TMPL_IF><TMPL_VAR content ESCAPE="HTML"></content>
+		<content type="html"<TMPL_IF content_language> xml:lang="<TMPL_VAR content_language>"</TMPL_IF>><TMPL_IF channel_face>&lt;img src=&quot;http://planet.opensource.dk/images/<TMPL_VAR channel_face ESCAPE="HTML">&quot; width=&quot;<TMPL_VAR channel_facewidth>&quot; height=&quot;<TMPL_VAR channel_faceheight>&quot; alt=&quot;&quot; align=&quot;right&quot; style=&quot;float: right;&quot;&gt;</TMPL_IF><TMPL_VAR content ESCAPE="HTML"></content>
 		<author>
 <TMPL_IF author_name>
 			<name><TMPL_VAR author_name ESCAPE="HTML"></name>
