--- a/templates/index.html.tmpl
+++ b/templates/index.html.tmpl
@@ -42,7 +42,7 @@
 					<TMPL_VAR date>
 
 					<br/><br/><b>Disclaimer:</b><br/>
-					Dette er folks egne meninger og har ikke nødvendigvis nogen forbindelse til hvad SSLUG mener.
+					Dette er folks egne meninger og har ikke nødvendigvis nogen forbindelse til hvad danske opensource-foreninger mener.
 
 					<br/><br/><b>Kom på:</b><br/>
 					Kontakt <a href="mailto:planet@sslug.dk">planet@sslug.dk</a> hvis du føler du vil være her.
