a bit of text about requirements for planet opensource

--- a/templates/index.html.tmpl
+++ b/templates/index.html.tmpl
@@ -45,7 +45,13 @@
 					Dette er folks egne meninger og har ikke nødvendigvis nogen forbindelse til hvad danske opensource-foreninger mener.
 
 					<br/><br/><b>Kom på:</b><br/>
-					Kontakt <a href="mailto:planet@sslug.dk">planet@sslug.dk</a> hvis du føler du vil være her.
+					Kontakt <a href="mailto:planet@sslug.dk">planet@sslug.dk</a> hvis du føler du vil være her. <br />
+					<i>Krav:</i>
+					<ul>
+					<li>Du skriver på skandinavisk og/eller på engelsk</li>
+					<li>Du er involveret i free/open source software på en eller anden måde</li>
+					<li>Du skriver en gang i mellem om noget relevant for free/open source software-verdenen</li>
+					</ul>
 					<br/><br/>
 					<div align="center">
 						<a href="rss20.xml">
