lad os fjerne ssluglogo

--- a/templates/index.html.tmpl
+++ b/templates/index.html.tmpl
@@ -30,7 +30,8 @@
 			
 			<td class="leftmenu" width="20%">
 				<div align="center">
-					<img src="images/ssluglogo100x100tr" alt="sslug logo" />
+					<!---img src="images/ssluglogo100x100tr" alt="sslug logo" /-->
+					<h1>planet<br />opensource<br />dk<br /></h1>
 				</div>
 
 				<div class="altmenu"><b>Folk:</b><br/>
