planet@sslug.dk til planet@opensource.dk

--- a/templates/index.html.tmpl
+++ b/templates/index.html.tmpl
@@ -46,7 +46,7 @@
 					Dette er folks egne meninger og har ikke nødvendigvis nogen forbindelse til hvad danske opensource-foreninger mener.
 
 					<br/><br/><b>Kom på:</b><br/>
-					Kontakt <a href="mailto:planet@sslug.dk">planet@sslug.dk</a> hvis du føler du vil være her. <br />
+					Kontakt <a href="mailto:planet@opensource.dk">planet@opensource.dk</a> hvis du føler du vil være her. <br />
 					<i>Krav:</i>
 					<ul>
 					<li>Du skriver på skandinavisk og/eller på engelsk</li>
