--- a/data/planet.css
+++ b/data/planet.css
@@ -69,7 +69,7 @@ span.commentlink {
 
 .menu {
 	font-size: 0.9em;
-	font-weight: bold;
+	font-weight: normal;
 	font-family: Verdana, Arial, Helvetica;
 	color: #c0c0f0;
 	padding-left: 1.0em;
