--- a/data/planet.css
+++ b/data/planet.css
@@ -79,7 +79,7 @@ span.commentlink {
 
 .altmenu {
 	font-size: 0.8em;
-	font-weight: bold;
+	font-weight: normal;
 	font-family: Verdana, Arial, Helvetica;
 	color: #000000;
 	padding-left: 2.0em;
