--- a/templates/index.html.tmpl
+++ b/templates/index.html.tmpl
@@ -30,8 +30,8 @@
 			
 			<td class="leftmenu" width="20%">
 				<div align="center">
-					<!---img src="images/ssluglogo100x100tr" alt="sslug logo" /-->
-					<h1>planet<br />opensource<br />dk<br /></h1>
+					img src="images/planet175.png" alt="p.o.d logo"
+					<h2>planet<br />opensource<br />dk<br /></h2>
 				</div>
 
 				<div class="altmenu"><b>Folk:</b><br/>
