--- a/templates/index.html.tmpl
+++ b/templates/index.html.tmpl
@@ -30,7 +30,7 @@
 			
 			<td class="leftmenu" width="20%">
 				<div align="center">
-					img src="images/planet175.png" alt="p.o.d logo"
+					<img src="images/planet175.png" alt="p.o.d logo"/>
 					<h2>planet<br />opensource<br />dk<br /></h2>
 				</div>
 
