--- a/templates/index.html.tmpl
+++ b/templates/index.html.tmpl
@@ -30,8 +30,8 @@
 			
 			<td class="leftmenu" width="20%">
 				<div align="center">
-					<img src="images/planet175.png" alt="p.o.d logo"/>
-					<b>PLANET.OPENSOURCE.DK<br /></b>
+					<img src="images/planet175.png" alt="p.o.d logo"/><br />
+					<b>PLANET.OPENSOURCE.DK</b><br /><br />
 				</div>
 
 				<div class="altmenu"><b>Folk:</b><br/>
