--- a/templates/index.html.tmpl
+++ b/templates/index.html.tmpl
@@ -30,7 +30,7 @@
 			
 			<td class="leftmenu" width="20%">
 				<div align="center">
-					<img src="images/planet175.png" alt="p.o.d logo"/><br />
+					<img src="images/planet175.png" alt="p.o.d logo"/><br /><br />
 					<b>PLANET.OPENSOURCE.DK</b><br /><br />
 				</div>
 
