- Fjernet Agger - Ny hackergotchi for cb400f - Tilføjet "_aktivt_" involveret samt et linieskift til "Krav" i template

--- a/templates/index.html.tmpl
+++ b/templates/index.html.tmpl
@@ -46,12 +46,12 @@
 					Dette er folks egne meninger og har ikke nødvendigvis nogen forbindelse til hvad danske opensource-foreninger mener.
 
 					<br/><br/><b>Kom på:</b><br/>
-					Kontakt <a href="mailto:planet@opensource.dk">planet@opensource.dk</a> hvis du føler du vil være her. <br />
+					Kontakt <a href="mailto:planet@opensource.dk">planet@opensource.dk</a> hvis du føler du vil være her. <br /><br />
 					<b>Krav:</b>
 					<ul>
 					<li>Du skriver på skandinavisk og/eller på engelsk</li>
 					<li>Du har en tilknytning til skandinavien</li>
-					<li>Du er involveret i free/open source software på en eller anden måde</li>
+					<li>Du er aktivt involveret i free/open source software på en eller anden måde</li>
 					<li>Du skriver en gang i mellem om noget relevant for free/open source software-verdenen</li>
 					</ul>
 					<br/><br/>
