--- a/data/planet.css
+++ b/data/planet.css
@@ -111,6 +111,11 @@ pre {
 	color: #000000;
 	font-size: 0.9em;
 	border: 1px solid #c0c0f0;
+	white-space: pre-wrap;       /* css-3 */
+	white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
+	white-space: -pre-wrap;      /* Opera 4-6 */
+	white-space: -o-pre-wrap;    /* Opera 7 */
+	word-wrap: break-word;       /* Internet Explorer 5.5+ */
 }
 
 img {
