... og et punktum :-|

--- a/templates/index.html.tmpl
+++ b/templates/index.html.tmpl
@@ -46,7 +46,7 @@
 					Dette er folks egne meninger og har ikke nødvendigvis nogen forbindelse til hvad danske opensource-foreninger mener.
 
 					<br/><br/><b>Kom på:</b><br/>
-					Kontakt <a href="mailto:planet@opensource.dk">planet@opensource.dk</a> hvis du føler du vil være her.<br/><br/>Inkluder venligst URL for det feed du ønsker optaget, samt en redegørelse for opfyldelsen af nedenstående krav<br /><br />
+					Kontakt <a href="mailto:planet@opensource.dk">planet@opensource.dk</a> hvis du føler du vil være her.<br/><br/>Inkluder venligst URL for det feed du ønsker optaget, samt en redegørelse for opfyldelsen af nedenstående krav.<br /><br />
 					<b>Krav:</b>
 					<ul>
 					<li>Du er aktivt involveret i free/open source software (udvikling, foreninger e.l.)</li>
